# OpenCL-game-of-life

./: CMakeLists.txt  README.md  main.cpp
